<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="800dp"
    android:layout_height="480dp"
    android:orientation="horizontal"
    tools:context=".pages.EnvironmentFragment">

    <Button
        android:id="@+id/btnConfig"
        android:layout_width="360dp"
        android:layout_height="140dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded"
        android:text="@string/configButton"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/primary"
        app:backgroundTint="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnWebSocket"
        android:layout_width="360dp"
        android:layout_height="140dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded"
        android:text="@string/webSocketButton"
        android:textSize="40sp"
        android:textColor="@color/primary"
        app:backgroundTint="@null"
        app:layout_constraintLeft_toRightOf="@id/btnConfig"
        app:layout_constraintTop_toTopOf="@id/btnConfig"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btnControl"
        android:layout_width="360dp"
        android:layout_height="140dp"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded"
        android:text="@string/controlButton"
        android:textSize="40sp"
        android:textColor="@color/primary"
        app:backgroundTint="@null"
        app:layout_constraintLeft_toLeftOf="@id/btnConfig"
        app:layout_constraintTop_toBottomOf="@id/btnConfig"
        app:layout_constraintBottom_toTopOf="@id/btnMember"/>

    <Button
        android:id="@+id/btnDbControl"
        android:layout_width="175dp"
        android:layout_height="140dp"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded_left"
        android:text="@string/dbControl"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        app:backgroundTint="@null"
        app:layout_constraintLeft_toLeftOf="@id/btnWebSocket"
        app:layout_constraintTop_toTopOf="@id/btnControl" />

    <Button
        android:id="@+id/btnRemoteTest"
        android:layout_width="175dp"
        android:layout_height="140dp"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded_right"
        android:text="@string/remoteTest"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        app:backgroundTint="@null"
        app:layout_constraintRight_toRightOf="@id/btnWebSocket"
        app:layout_constraintTop_toTopOf="@id/btnControl" />

    <Button
        android:id="@+id/btnMember"
        android:layout_width="360dp"
        android:layout_height="140dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded"
        android:text="@string/insertMember"
        android:textSize="42sp"
        android:textColor="@color/primary"
        app:backgroundTint="@null"
        app:layout_constraintLeft_toLeftOf="@id/btnControl"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btnUi"
        android:layout_width="175dp"
        android:layout_height="140dp"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded_left"
        android:text="@string/uiButton"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="@color/primary"
        app:backgroundTint="@null"
        app:layout_constraintLeft_toLeftOf="@id/btnDbControl"
        app:layout_constraintTop_toTopOf="@id/btnMember" />

    <Button
        android:id="@+id/btnSystemExit"
        android:layout_width="175dp"
        android:layout_height="140dp"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded_right"
        android:text="@string/systemExit"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="@color/primary"
        app:backgroundTint="@null"
        app:layout_constraintRight_toRightOf="@id/btnRemoteTest"
        app:layout_constraintTop_toTopOf="@id/btnUi" />

</androidx.constraintlayout.widget.ConstraintLayout>