<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="800dp"
    android:layout_height="380dp"
    tools:context=".pages.MemberCheckFailedFragment">



    <TextView
        android:id="@+id/textViewMemberCheckFailedMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/memberCheckFailedMessage"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageViewMemberFailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/auth_error"
        app:layout_constraintTop_toBottomOf="@id/textViewMemberCheckFailedMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/textViewFailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="!"
        android:textSize="60sp"
        android:textColor="#9A0C0C"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/imageViewMemberFailed"
        app:layout_constraintEnd_toEndOf="@id/imageViewMemberFailed"
        app:layout_constraintTop_toTopOf="@id/imageViewMemberFailed"
        tools:ignore="contentDescription"/>

    <TextView
        android:id="@+id/textViewConnectorRetryMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/connectorRetryMessage"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewMemberFailed" />

    <TextView
        android:id="@+id/textViewMemberRegistMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/memberRegistMessage"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/textViewConnectorRetryMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>