<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/initLayout"
    android:layout_width="512dp"
    android:layout_height="662dp"
    tools:context=".pages.InitFragment">

    <View
        android:id="@+id/viewCircle"
        android:layout_width="440dp"
        android:layout_height="440dp"
        android:background="@drawable/layer_list_oval_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/imageViewBus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:background="@drawable/car_blue"
        app:layout_constraintTop_toTopOf="@id/viewCircle"
        app:layout_constraintStart_toStartOf="@id/viewCircle"
        app:layout_constraintEnd_toEndOf="@id/viewCircle"
        tools:ignore="contentDescription" />
    
    <ImageView
        android:id="@+id/imageViewFault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/nm"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/imageViewBus"
        app:layout_constraintEnd_toEndOf="@id/imageViewBus"
        app:layout_constraintBottom_toBottomOf="@id/imageViewBus"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/textViewConnector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/connector"
        android:textSize="36sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/imageViewBus"
        app:layout_constraintStart_toStartOf="@id/imageViewBus"
        app:layout_constraintEnd_toEndOf="@id/imageViewBus" />

    <TextView
        android:id="@+id/textViewInitMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/initMessage"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/textViewConnector"
        app:layout_constraintStart_toStartOf="@id/textViewConnector"
        app:layout_constraintEnd_toEndOf="@id/textViewConnector" />

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/intiInfo"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>