<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="1024dp"
    android:layout_height="768dp"
    tools:context=".pages.AdminPasswordFragment">

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:importantForAutofill="no"
        android:textSize="36sp"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TextViewEdits" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="500dp"
        android:layout_height="6dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="2dp"
        android:background="#224E98"
        app:layout_constraintStart_toStartOf="@id/editPassword"
        app:layout_constraintEnd_toEndOf="@id/editPassword"
        app:layout_constraintTop_toBottomOf="@id/editPassword" />

    <ImageView
        android:id="@+id/imageViewAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/admin"
        app:layout_constraintEnd_toStartOf="@id/textViewAdminMessage"
        app:layout_constraintTop_toTopOf="@id/textViewAdminMessage"
        app:layout_constraintBottom_toBottomOf="@id/textViewAdminMessage"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/textViewAdminMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/adminMessage"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toBottomOf="@id/viewLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="142dp"
        android:text="@string/cancel"
        android:textSize="40sp"
        android:background="@drawable/shape_btn_white"
        app:layout_constraintTop_toBottomOf="@id/textViewAdminMessage"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:layout_marginStart="60dp"
        android:text="@string/check"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:background="@drawable/shape_btn_blue"
        app:layout_constraintTop_toTopOf="@id/btnCancel"
        app:layout_constraintStart_toEndOf="@id/btnCancel" />
    
</androidx.constraintlayout.widget.ConstraintLayout>