<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="512dp"
    android:layout_height="662dp"
    tools:context=".pages.CreditCardFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layer_list_rect" />

    <TextView
        android:id="@+id/textViewCreditMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/creditMessage"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtPriceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="56dp"
        android:text="@string/prePayment"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/textViewCreditMessage"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/txtInputAmt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="right|center"
        android:layout_marginStart="20dp"
        android:text="0"
        android:textSize="32sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/txtPriceTitle"
        app:layout_constraintTop_toTopOf="@id/txtPriceTitle"
        app:layout_constraintBottom_toBottomOf="@id/txtPriceTitle"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/won"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/payUnitMessage"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/txtInputAmt"
        app:layout_constraintBottom_toBottomOf="@id/txtInputAmt" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="400dp"
        android:layout_height="4dp"
        android:layout_marginTop="5dp"
        android:layout_centerInParent="true"
        android:background="@color/primary"
        app:layout_constraintLeft_toLeftOf="@id/txtPriceTitle"
        app:layout_constraintTop_toBottomOf="@id/txtInputAmt"  />

    <ImageView
        android:id="@+id/imageViewCardReader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/card_to_reader_background"
        app:layout_constraintTop_toBottomOf="@id/viewLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="contentDescription"/>

    <ImageView
        android:id="@+id/imageViewCreditCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/creditcardtagging"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="@id/imageViewCardReader"
        app:layout_constraintEnd_toEndOf="@id/imageViewCardReader"
        app:layout_constraintTop_toTopOf="@id/imageViewCardReader"
        app:layout_constraintBottom_toBottomOf="@id/imageViewCardReader"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/textViewTagTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="20초"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/imageViewCardReader"
        app:layout_constraintEnd_toEndOf="@id/imageViewCardReader"
        app:layout_constraintTop_toBottomOf="@id/imageViewCardReader" />

    <TextView
        android:id="@+id/textViewCreditCardSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/creditSubMessage"
        android:textSize="24sp"
        android:textColor="@color/black_500"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>